# Expected-Returns

./: 404.html  README.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-docs.yml
CHANGELOG/: index.html
Docs/: CHANGELOG.md
docs/: mkdocs.yml
docs/docs/: index.md
expected_returns/: backend.py  docker-compose.yml  scraper.py
expected_returns/backend/: Dockerfile  main.py  requirements.txt  scraper.py
expected_returns/database/: database.py  main.py  models.py  requirements.txt
expected_returns/frontend/: Dockerfile  main.py  requirements.txt
search/: search_index.json
tests/: test_backend.py  test_database.py  test_expected_returns.py  test_scraper.py
