[tool.poetry]
name = "Expected-Returns"
version = "0.1.0"
description = ""
authors = ["yemaney <yemane_@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
