[tool.poetry]
name = "Expected-Returns"
version = "0.1.0"
description = ""
authors = ["yemaney <yemane_@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.7.1"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
streamlit = "^1.3.0"
sqlmodel = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
